# lepi-ros-server

./: .gitignore  README.md  env.sh  lepi_server  ros.sh
catkin_ws/src/pi_ai/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/pi_ai/include/pi_ai/: __init__.py  hand_detector.py  image_classifier.py  labels_map.py  load_runtime.py  movenet_pose.py  object_detector.py  pose_estimator.py  style_transfer.py
catkin_ws/src/pi_ai/launch/: hand_detector_node.launch  image_classifier_node.launch  movenet_pose_node.launch  object_detection_node.launch  object_detector_node.launch  pose_estimator_node.launch  smart_audio_node.launch  text_recognizer_node.launch
catkin_ws/src/pi_ai/msg/: ObjectDetection.msg
catkin_ws/src/pi_ai/src/: hand_detector_node.py  image_classifier_node.py  movenet_pose_node.py  object_detector_node.py  pose_estimator_node.py  smart_audio_node.py  snowboydecoder.py  text_detect.py  text_recognizer_node.py
catkin_ws/src/pi_ai/srv/: GetCommandDetection.srv
catkin_ws/src/pi_cam/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/pi_cam/camera_info/calibrations/: default.yaml  pi_cam_640x480.yaml
catkin_ws/src/pi_cam/include/apriltag_detector/: __init__.py  apriltag_detector.py
catkin_ws/src/pi_cam/include/barcode_scanner/: __init__.py  barcode_scanner.py
catkin_ws/src/pi_cam/include/camera_utils/: __init__.py  camera_utils.py  cameramodels.py  image_rector.py  usb_camera.py
catkin_ws/src/pi_cam/include/face_recognizer/: __init__.py  face_recognizer.py  ultra_face_inference.py
catkin_ws/src/pi_cam/include/image_processor/: __init__.py  image_processor.py
catkin_ws/src/pi_cam/include/keras_transfer/: __init__.py  data_utils.py  keras_transfer.py
catkin_ws/src/pi_cam/include/line_detector/: __init__.py  default.yaml  line_detector.py  test.py  test2.yaml
catkin_ws/src/pi_cam/launch/: apriltag_detector_node.launch  barcode_scanner_node.launch  calibrate.launch  camera_lib_node.launch  camera_node.launch  camera_server_node.launch  duck_service2.launch  face_recognizer_node.launch  image_processor_node.launch  line_detector_node.launch  pi_cam_node4.launch  pi_camera_node.launch  text_recognizer_node.launch  transfer_learning_node.launch  ultra_face_inference_node.launch  usb_camera_node.launch  web_video.launch
catkin_ws/src/pi_cam/msg/: ApriltagPose.msg  FaceDetection.msg  LineDetection.msg  ObjectDetection.msg
catkin_ws/src/pi_cam/src/: Car.py  apriltag3_detector_node.py  apriltag_detector.py  apriltag_detector_node.py  barcode_scanner.py  barcode_scanner_node.py  camera_all_node.py  camera_info_node.py  camera_node.py  camera_node2.py  camera_node3.py  camera_node3_raw.py  camera_node4.py  camera_utils.py  data_utils.py  decoder_node.py  default.yaml  face_recognizer_node.py  image_processor_node.py  image_rect_node.py  image_rect_node2.py  image_rector.py  keras_transfer.py  lepi.py  line_detector_node.py  pi_camera.py  test.py  text_recognizer.py  text_recognizer_node.py  transfer_learning_node.py  ultra_face_inference_node.py  usb_camera.py
catkin_ws/src/pi_cam/src/test/: lane_detector_node.py  lane_filter_node.py
catkin_ws/src/pi_cam/srv/: AddProc.srv  GetColorThreshold.srv  GetCompressedFrame.srv  GetFaceDetections.srv  GetFrame.srv  GetLineDetection.srv  GetObjectDetections.srv  GetPredictions.srv  SetColorThreshold.srv  SetPid.srv  SetRoi.srv
catkin_ws/src/pi_cam/test/: Car.py  lane_detector_node.py  lane_filter_node.py  lepi.py  service_test.py  test.py
catkin_ws/src/pi_driver/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/pi_driver/include/pi3_driver/: audio_driver.py  i2c_driver.py  i2c_driver2.py  lepi.py
catkin_ws/src/pi_driver/launch/: all_node_test.launch  bluetooth_adv_node.launch  joystick_node.launch  lepi_desktop.launch  lepi_driver_node.launch  lepi_host.launch  lepi_server.launch  pi4_driver_node.launch  pi_driver_node.launch  pi_master_node.launch  pi_server_node.launch  rosbridge_websocket.launch  test.launch  test_image_classifier.launch  test_transfer_learning.launch
catkin_ws/src/pi_driver/msg/: ButtonEvent.msg  MotorInfo.msg  MotorSetPosition.msg  MotorSetSpeed.msg  Sensor3Axes.msg  SensorStatusChange.msg  ServoInfo.msg  U8Int32.msg
catkin_ws/src/pi_driver/src/: Car.py  bluetooth_adv_node.py  button_driver_node.py  joystick_node.py  pi3_driver_node.py  pi4_driver_node.py  pi_driver_node.py  pi_driver_node2.py  pi_master_node.py
catkin_ws/src/pi_driver/srv/: GetApriltagDetections.srv  GetCommandDetection.srv  GetInt32.srv  GetMotorsInfo.srv  GetPowerState.srv  GetSensorInfo.srv  GetServosInfo.srv  GetString.srv  GetStrings.srv  MotorGetPosition.srv  SensorGet3Axes.srv  SetInt32.srv  SetOffset.srv  SetServoParam.srv  SetServoPosition.srv  SetString.srv
catkin_ws/src/pi_robot/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/pi_robot/include/: .gitignore
catkin_ws/src/pi_robot/launch/: hexapod_driver_node.launch  pupper_driver_node.launch
catkin_ws/src/pi_robot/src/: hexapod_driver_node.py  pupper_driver_node.py
ros2_ws/src/pi_interface/: CMakeLists.txt  package.xml
ros2_ws/src/pi_interface/msg/: FaceDetection.msg  MotorSetPosition.msg  NineAxisValue.msg  NineAxisValueChange.msg  ObjectDetection.msg  SensorValueChange.msg  ServoInfo.msg
ros2_ws/src/pi_interface/srv/: AddProc.srv  GetApriltagDetections.srv  GetColorThreshold.srv  GetCommandDetection.srv  GetFaceDetections.srv  GetFrame.srv  GetInt32.srv  GetMotorsInfo.srv  GetObjectDetections.srv  GetPowerState.srv  GetSensorInfo.srv  GetServosInfo.srv  GetStrings.srv  MotorGetPosition.srv  SensorGet3Axes.srv  SetColorThreshold.srv  SetInt32.srv  SetOffset.srv  SetPid.srv  SetServoParam.srv  SetServoPosition.srv
(+121 files in other folders)
