<?xml version="1.0"?>
<package>
    <name>pi_robot</name>
    <version>1.0.0</version>
    <description>TODO: Add a description of package `hexapod_driver` in `package.xml`.</description>

    <maintainer email="wupanhao@qq.com">Panhao Wu</maintainer>


    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>

    <export>
    </export>
</package>
